<resources>
    <string name="app_name">Demo</string>
    <string name="signup_text">Not signed up yet? Sign up here.</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="login">Login</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="demo">Demo</string>
    <string name="verify_user">Verify User</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="ok">Ok</string>
    <string name="home">Home</string>
    <string name="post">Post</string>
    <string name="profile">Profile</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="image_to_upload">Image to uplaod</string>
    <string name="created_by">Created by : </string>
    <string name="created_on">Created on : </string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="title_error">Please enter the title</string>
    <string name="description_error">Please enter the description</string>
    <string name="something_went_wrong">Something went wrong. Please try again.</string>
    <string name="post_added">Post added successfully.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
