<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="homeVeiwModel"
            type="com.testing.demo.viewmodel.HomeViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin_10"
        tools:context=".ui.fragments.PostFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/title"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:text="@={homeVeiwModel.title}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/description"
                android:inputType="textCapWords"
                android:maxLines="3"
                android:singleLine="false"
                android:text="@={homeVeiwModel.description}" />
        </com.google.android.material.textfield.TextInputLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/img_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/image_size"
                    android:layout_height="@dimen/image_size"
                    android:contentDescription="@string/image_to_upload"
                    android:onClick="@{()->homeVeiwModel.onImageButtonClicked()}"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_image_black_24dp"
                    android:visibility="@{homeVeiwModel.filePaths.size()&lt;5?View.VISIBLE:View.GONE}" />

            </LinearLayout>
        </HorizontalScrollView>

        <Button
            android:id="@+id/btn_submit_post"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@color/colorPrimary"
            android:enabled="@{homeVeiwModel.isProcessRunning?false:true}"
            android:text="@string/post"
            android:textColor="@android:color/white" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_10"
            android:visibility="@{homeVeiwModel.isProcessRunning?View.VISIBLE:View.GONE}" />
    </LinearLayout>
</layout>