<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="loginViewModel"
            type="com.testing.demo.viewmodel.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="22dp"
            android:gravity="center"
            android:text="@string/demo"
            android:textColor="#000"
            android:textSize="35sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="@{loginViewModel.isWaiting?View.GONE:View.VISIBLE}"
            tools:ignore="MissingConstraints">

            <com.hbb20.CountryCodePicker
                android:id="@+id/countryCodePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_countryPreference="in" />

            <EditText
                android:id="@+id/etMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/enter_verification_code"
                android:focusableInTouchMode="true"
                android:hint="@string/enter_mobile_number"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLines="1"
                android:text="@={loginViewModel.mobileNumber}" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/etVerificationCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/enter_verification_code"
                android:enabled="@{loginViewModel.isWaiting?false:true}"
                android:focusable="@{loginViewModel.isWaiting?false:true}"
                android:focusableInTouchMode="@{loginViewModel.isWaiting?false:true}"
                android:hint="@string/enter_verification_code"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLines="1"
                android:text="@={loginViewModel.otpText}"
                android:visibility="@{loginViewModel.isWaiting?View.VISIBLE:View.GONE}" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="@{loginViewModel.isWaiting?View.VISIBLE:View.GONE}"/>
        </FrameLayout>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:enabled="@{loginViewModel.isWaiting?false:true}"
            android:onClick="@{()->loginViewModel.loginButtonClicked()}"
            android:text="@{loginViewModel.isWaiting?@string/verify_user:@string/login}"
            android:textColor="@android:color/white" />
    </LinearLayout>
</layout>
